refactor(resource): model the DAG edges/members/grants as explicit entities
Replace the implicit JPA-managed associations on the resource aggregate with
explicit entities + repositories, so every row write/delete is visible in the
service instead of a hidden JPA cascade:

- resource_edge: new ResourceEdge (@IdClass parent_id/child_id) + repository;
  drop Resource.children @ManyToMany. Cycle/reachability checks and edge
  insert/delete move into ResourceGraphService over the edge repo.
- resource_member: new ResourceMemberRow embedding the ResourceMember value
  object in an @EmbeddedId (whole row is its key) + repository; drop the
  @ElementCollection.
- resource_role: new ResourceGrantRow (@IdClass resource/user/tier + role_id)
  + repository; drop the @ElementCollection. Grant replace = explicit delete
  then insert.
- resource_type_allowed_member: new ResourceTypeAllowedMember (@IdClass) +
  repository; drop ResourceType.allowedMemberTypes @ElementCollection.

Resource deletion now explicitly removes its edges (both directions), member
rows and grant rows before the node. Member-kind invariants stay on the
aggregate as pure validation methods taking the allowed kinds as an argument.
Schema is unchanged; ddl-auto=validate passes.